resources/js/assets/sass/index.scss
@font-face {
    font-family: OpenSauce;
    src: url("../font/OpenSauce.ttf");
}

@font-face {
    font-family: OpenSauceBold;
    src: url("../font/OpenSauceBold.ttf");
}

.award_image {
    width: calc((100vw - 233px) / 8);
    @media (max-width: 1024px) {
        width: calc((100vw - 71px) / 8);
    }
}

.award_image-2 {
    width: calc((100% - 20px) / 9);
}

.consultation_cta {
    a {
        display: flex;
        gap: 15px;
        text-decoration: none;
        font-size: 1.6459rem;
        color: #03396c;
        line-height: 1.42498753em;
        letter-spacing: 0.009em;
        &:hover {
            color: #005b96;
            img {
                margin-left: 25px !important;
            }
        }
        img {
            width: 50px;
            transition: all 300ms ease-in-out;
        }
    }
}

.value_item {
    img {
        transition: all 700ms ease-in-out;
    }
    &:hover {
        img {
            transform: scale(1.1);
        }
    }
}


.services h1,h2,h3,h4, .span_heading {
    font-family: "OpenSauceBold" !important;
}

